# movie-api

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: handler.rs  main.rs  model.rs  response.rs
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/components/: AddModal.svelte  DeleteModal.svelte  EditModal.svelte  EmptyBox.svelte  MovieCard.svelte  ShowCard.svelte
frontend/src/lib/: data.js  index.js
frontend/src/routes/: +page.server.js  +page.svelte
