[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = "0.4.28"
env_logger = "0.10.0"
futures-util = "0.3.28"
mongodb = "2.6.1"
rand = "0.8.5"
serde = "1.0.188"
uuid = "1.4.1"
validator = { version = "0.16.1", features = ["derive"] }
